# scrapybara-agent

./: .env.example  .gitignore  README.md  hello.py  pyproject.toml
app/: agent.py  bot.py  env.py  utils.py
